# ccy

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh  test_clipboard.rs  test_script.sh
shell-hooks/: bash_hook.sh  simple_hook.sh  zsh_hook.sh
src/: capture.rs  main.rs  session.rs
